[package]
name = "hdfs-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
byte-unit = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
